tests/mysql/ui/mysql_unnest_not_supported.stderr
error: error returned from database: 1305 (42000): FUNCTION sql_forge_test.UNNEST does not exist
  --> tests/mysql/ui/mysql_unnest_not_supported.rs:9:13
   |
 9 |       let _ = sql_forge!(
   |  _____________^
10 | |         Row,
11 | |         "SELECT UNNEST(1) AS id",
12 | |     );
   | |_____^
   |
   = note: this error originates in the macro `$crate::sqlx_macros::expand_query` which comes from the expansion of the macro `sql_forge` (in Nightly builds, run with -Z macro-backtrace for more info)
